--- a/base.yml
+++ b/base.yml
@@ -15,6 +15,9 @@ matches:
   - trigger: ":login"
     replace: "\nOlá [Expositor], \nComo vai? \n\nAs informações de Login e Senha (acesso ao Portal do Expositor), acabam de ser enviadas ao e-mail: \n[e-mail para envio das informações] \n\n!!! Essa mensagem é apenas uma notificação !!! \nVocê receberá um outro e-mail (automático), com as informações de Login. \nPeço a gentileza de checar a pasta de SPAM – algumas vezes esse tipo de e-mail vai parar lá. \n\nCaso ainda assim não receba, pode me passar um outro endereço de e-mail ao qual você tenha acesso, para que possamos enviar as informações. (Ex. @gmail.com, @hotmail.com, etc.) \n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
+  - trigger: ":pass"
+    replace: "\nHello [Exhibitor], \nHow are you? \n\nThe Login and Password information (access to the Exhibitor Portal) have just been sent to the e-mail: \n[email for sending the information] \n \n!!! This message is just a notification !!! \nYou will receive another email (automatic), with the Login information. \nPlease check your SPAM folder – sometimes this type of e- mail will end up there. \n\nIf you still don't receive it, you can give me another email address that you have access to, so that we can send the information. (Ex. @gmail.com, @hotmail.com, etc.) \n\nAny questions, we are at your disposal.\n\n\nSincerely, \nMarcelo Salles \nCustomer Service \nT.(11) 2226-3100 - Option 1 \ncs@francal.com.br \nwww.francalfeiras.com. br"
+
   - trigger: ":fornece"
     replace: "\nOlá [Fornecedor], \n\nEncaminhei seu e-mail para o setor Responsável. \nSerá analisada a viabilidade e então, em caso positivo, entraremos em contato. \n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
@@ -81,8 +84,11 @@ matches:
   - trigger: ":expotelecom"
     replace: "\nInformações Comerciais Expo Telecom: \nCentral Única de Comercialização: \nTel.: 11 4210-0810 \nexpotelecom@mapptv.com.br"
     
-  - trigger: ":cidtech"
-    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Bio/Natural Tech: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1595 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+  - trigger: ":cidbio"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Bio/Natural Tech 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1595 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    
+  - trigger: ":cidesco"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Escolar Office 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1601 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
   - trigger: ":cas"
     replace: "\nCAS STANDS - KAAS PROMOÇÃO DE FEIRAS E EVENTOS \nAV. FAUSTINO RAMALHO, 781 - VILA GALVÃO - GUARULHOS \nCEP: 07054040 - SÃO PAULO – SP \nTELEFONE: (11) 24973777 - MALU: 99974.1244 / RICARDO: 99279 9702 \nE-MAIL: cas@casstands.com.br / malu@casstands.com.br / ricardo@casstands.com.br \nCONTATO: MALU CHIAPARRO /  RICARDO SAUANDAG"
@@ -130,7 +136,7 @@ matches:
     replace: "Hipernet \nContato: Luciano \nTelefone: (11) 3077-5500 \nE-mail: feiras@hipernet.net"
     
   - trigger: ":yours"
-    replace: "Yours sincerely, \n\nMarcelo Salles \nCustomer Service \nT. 55 11 2226-3100 - Option 1 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "Let me know if I may help any further. \n\n\nYours sincerely, \n\nMarcelo Salles \nCustomer Service \nT. 55 11 2226-3100 - Option 1 \ncs@francal.com.br \nwww.francalfeiras.com.br"
     
   - trigger: ":caf"
     replace: "CAF - Central de Atendimento Francal"
