--- a/base.yml
+++ b/base.yml
@@ -89,6 +89,9 @@ matches:
     
   - trigger: ":cidesco"
     replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Escolar Office 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1601 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+  
+  - trigger: ":cidsea"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Seafood Show 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1604 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
   - trigger: ":cas"
     replace: "\nCAS STANDS - KAAS PROMOÇÃO DE FEIRAS E EVENTOS \nAV. FAUSTINO RAMALHO, 781 - VILA GALVÃO - GUARULHOS \nCEP: 07054040 - SÃO PAULO – SP \nTELEFONE: (11) 24973777 - MALU: 99974.1244 / RICARDO: 99279 9702 \nE-MAIL: cas@casstands.com.br / malu@casstands.com.br / ricardo@casstands.com.br \nCONTATO: MALU CHIAPARRO /  RICARDO SAUANDAG"
