--- a/base.yml
+++ b/base.yml
@@ -31,7 +31,7 @@ matches:
     replace: "\nOlá [Prospect], \nComo vai? \n\nFicamos felizes em saber do seu interesse em Expor na [Feira][Ano]. \n\nEncaminhei seu e-mail para o setor Responsável. \nEm breve um Agente Comercial entrará em contato com você. \n\n*Estamos tendo um tempo maior do que o normal para retorno, por causa de um número alto de procura para exposição. \nMas fique tranquila(o). Estabelecemos uma fila de prioridades e serão respondidos em ordem de chegada da solicitação. \n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
     
   - trigger: ":prosint"
-    replace: "\nHello Dear Sir/Madam, \n\nWe hope you're doing fine! \n\nWe are happy to know of your interest in Exhibiting with us. \n\nI have forwarded your email to the Responsible sector. \nA Commercial Agent will contact you shortly. \n\n\nYours sincerely, \n\nMarcelo Salles \nCustomer Service \nT. 55 11 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "\nHello Dear Sir/Madam, \n\nWe hope you're doing fine! \n\nWe are happy to know of your interest in exhibiting with us. \n\nI have forwarded your email to the Responsible sector. \nA Commercial Agent will contact you shortly. \n\n\nYours sincerely, \n\nMarcelo Salles \nCustomer Service \nT. 55 11 2226-3100 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
   - trigger: ":samara"
     replace: "\nOi [AgenteComercial], \n\nSegue QUERO EXPOR - [FEIRA_ANO]. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
@@ -85,7 +85,7 @@ matches:
     replace: "\nInformações Comerciais EXPO TELECOM \nCentral Única de Comercialização: \nTel.: 11 4210-0810 \nexpotelecom@mapptv.com.br"
     
   - trigger: ":cidbio"
-    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Bio/Natural Tech 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1595 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Bio\natural Tech 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1595 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
     
   - trigger: ":cidesco"
     replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Escolar Office 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1601 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
@@ -135,7 +135,7 @@ matches:
   - trigger: ":bor"
     replace: "Expobor & Pneushow 2024"
 
-  - trigger: ":buffet"
+  - trigger: ":rodel"
     replace: "RODELFEST \nTELEFONE: (11)5051 9300 \nWHATSAPP: (11)95862 4181 \nE-MAIL: atendimento@rodelfest.com.br"
 
   - trigger: ":conset"
@@ -176,6 +176,12 @@ matches:
     
   - trigger: ":4events"
     replace: "Coletor de Contatos - 4Events \nE-mail: coletor@4.events"
+    
+  - trigger: ":meuestaciona"
+    replace: "MEU ESTACIONAMENTO \n\nTelefones:(11) 94001-9407 \nE-mail: meucontato@meuestacionamento.com.br"
+    
+  - trigger: ":nf"
+    replace: "Prezado Expositor ou Parceiro,\n\nCompreendemos sua preocupação com a nota fiscal em vez do recibo. Contudo, emitimos recibos com base em no entendimento do Superior Tribunal de Justiça (STJ), que dispensa a obrigatoriedade de emissão de nota fiscal e tributação, no caso de reembolsos pagos por terceiros - REsp nº 411.580/SP. \n\nNão se trata de tema pacificado. Para evitar futuros problemas, você pode considerar uma consulta tributária à Secretaria de Fazenda do Município. Isso fornecerá clareza e segurança à sua empresa em relação a esse assunto. \n\nColocamo-nos à disposição para quaisquer esclarecimentos."
 
   - trigger: ":dummy"
     replace: "Lorem ipsum dolor sit amet, consectetur elit,\n sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\n Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut\n aliquip ex ea commodo consequat.\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum\n dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,\n sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit."
