--- a/base.yml
+++ b/base.yml
@@ -85,16 +85,19 @@ matches:
     replace: "\nInformações Comerciais EXPO TELECOM \nCentral Única de Comercialização: \nTel.: 11 4210-0810 \nexpotelecom@mapptv.com.br"
     
   - trigger: ":cidbio"
-    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Bio\natural Tech 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1595 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Bio\natural Tech 2023: \n\nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1595 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
     
   - trigger: ":cidesco"
-    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Escolar Office 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1601 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Escolar Office 2023: \n\nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1601 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
   
   - trigger: ":cidsea"
-    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Seafood Show 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1604 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato Seafood Show 2023: \n\nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1604 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
   - trigger: ":cidifpa"
-    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato The Brazil Conference - IFPA 2023: \nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1605 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato The Brazil Conference - IFPA 2023: \n\nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1605 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
+    
+  - trigger: ":cidveg"
+    replace: "\nOlá [Expositor], \nComo vai? \n\nSegue o link para contratação de coletores de contato The Brazil Conference - VEGFEST 2023: \n\nhttps://www.regtronweb.com.br/coletor/reserva_novo/emailMarketing.php?idevento=1609 \n\n11 3855 1500 \ncoletor@cidtech.com.br \n\n\nQualquer dúvida, estamos à disposição. \n\n\nAtenciosamente, \n\nMarcelo Salles \nCustomer Service \nT. (11) 2226-3100 - Opção 9 \ncs@francal.com.br \nwww.francalfeiras.com.br"
 
   - trigger: ":cas"
     replace: "\nCAS STANDS - KAAS PROMOÇÃO DE FEIRAS E EVENTOS \nAV. FAUSTINO RAMALHO, 781 - VILA GALVÃO - GUARULHOS \nCEP: 07054040 - SÃO PAULO – SP \nTELEFONE: (11) 24973777 - MALU: 99974.1244 / RICARDO: 99279 9702 \nE-MAIL: cas@casstands.com.br / malu@casstands.com.br / ricardo@casstands.com.br \nCONTATO: MALU CHIAPARRO /  RICARDO SAUANDAG"
