--- a/base.yml
+++ b/base.yml
@@ -133,10 +133,10 @@ matches:
     replace: "\nParking INDIGO: \n\nTelefone: (11) 5067-1670 / 96499-2540 \nE-mail: wilson.molina@group-indigo.com"
     
   - trigger: ":bio"
-    replace: "Bio Brazil | Naturaltech 2023"
+    replace: "Bio Brazil | Naturaltech 2024"
 
   - trigger: ":latam"
-    replace: "Latam Retail Show & Expo 2023"
+    replace: "Latam Retail Show & Expo 2024"
     
   - trigger: ":bor"
     replace: "Expobor & Pneushow 2024"
@@ -177,17 +177,27 @@ matches:
   - trigger: ":celcaf"
     replace: "Celular CAF \n11-93962-7617"
     
-  - trigger: ":inter"
+  - trigger: ":hostess"
     replace: "Translator and Interpreter \nMrs. Karina Chung \n(55-27)99203-0854 \nkaka.chung@hotmail.com"
     
   - trigger: ":4events"
     replace: "Coletor de Contatos - 4Events \nE-mail: coletor@4.events"
     
+  - trigger: ":covisa"
+    replace: "Olá, Expositor \n\nEsperamos que esteja bem! Ressaltando o item INSTALAÇÃO DE FOOD TRUCK mencionado no boletim informativo, esclarecemos que existe a obrigatoriedade de envio (e-mail: cs@francal.com.br)  do protocolo de notificação à Coordenadoria de Vigilância Sanitária – COVISA para a participação de sua empresa no VEGFEST 2023 até 21/11/2023. \n\nCaso tenha dúvidas, descrevemos abaixo o procedimento e contatos para as providências: \n\nÉ necessário Notificar à Coordenadoria de Vigilância Sanitária – COVISA através do Formulário de Avaliação Prévia das Instalações e dos Serviços Relacionados à Manipulação de Alimentos para a participação de sua empresa no 10º CONGRESSO VEGANO BRASILEIRO E EXPOSIÇÃO – VEGFEST 2023, que acontecerá de 30 de novembro à 03 de dezembro de 2023 (de quinta a domingo) – das 10h às 19h, no Expo Center Norte Pavilhão Amarelo , para isso: \n\nAcesse o site da COVISA (Coordenação de Vigilância em Saúde) https://www.prefeitura.sp.gov.br/covisa/ \n Procure pela seção referente à manipulação de alimentos e segurança alimentar. \n Verifique o formulário de avaliação prévia disponível para download e as orientações sobre formulário. \n Preencha o formulário com as informações solicitadas, incluindo detalhes sobre as instalações e os serviços relacionados à manipulação de alimentos. \n	Envie o formulário preenchido para a COVISA covisaalimentos@PREFEITURA.SP.GOV.BR, conforme as instruções fornecidas no próprio formulário ou no site da COVISA. \n\n Posteriormente,  encaminhar a notificação com a cientificação da instituição para o e-mail: cs@francal.com.br (Protocolo de Notificação, para cumprimento do processo de alvará de funcionamento do evento)\n\n Você consegue suporte a respeito da documentação com o Grupo Eldorado (Responsável por A/B da VegFest) que está conduzindo essa questão junto aos expositores. Assim, para suporte sobre documentação de Anvisa, COVISA, alvarás, etc:
+\n\nGabriela Moreno \n\nqualidade@grupoeld.com.br"
+    
   - trigger: ":meuestaciona"
     replace: "MEU ESTACIONAMENTO \n\nTelefones:(11) 94001-9407 \nE-mail: meucontato@meuestacionamento.com.br"
     
+  - trigger: ":estapar"
+    replace: "ESTAPAR \nContato através do tel. (11) 2221-6700, \nno horário das 08h00 às 18h00,\ne-mail: estacionamentoexpo@estapar.com.br"
+    
   - trigger: ":nf"
     replace: "Prezado Expositor ou Parceiro,\n\nCompreendemos sua preocupação com a nota fiscal em vez do recibo. Contudo, emitimos recibos com base em no entendimento do Superior Tribunal de Justiça (STJ), que dispensa a obrigatoriedade de emissão de nota fiscal e tributação, no caso de reembolsos pagos por terceiros - REsp nº 411.580/SP. \n\nNão se trata de tema pacificado. Para evitar futuros problemas, você pode considerar uma consulta tributária à Secretaria de Fazenda do Município. Isso fornecerá clareza e segurança à sua empresa em relação a esse assunto. \n\nColocamo-nos à disposição para quaisquer esclarecimentos."
+
+  - trigger: ":mcs"
+    replace: "MODERN CONSTRUCTION SHOW 2024"
 
   - trigger: ":dummy"
     replace: "Lorem ipsum dolor sit amet, consectetur elit,\n sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\n Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut\n aliquip ex ea commodo consequat.\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum\n dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,\n sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit."
