--- a/base.yml
+++ b/base.yml
@@ -73,7 +73,7 @@ matches:
     replace: "Estou finalizando esse atendimento, então. Qualquer dúvida estamos à disposição."
     
   - trigger: ":amjr"
-    replace: "AMJR SEGURANÇA PRIVADA LTDA \n Rua Cabo Antônio Pereira da Silva, 506 – Jardim Tranquilidade \nCEP: 07051-011 - São Paulo – SP \nTels.: (11) 9.8239-7479 / 9.4739-5115 / 9.4026-3671 / 2656-6868 \nContato: Vanessa Verillo \nE-mail: comercial@amjrsp.com.br / vanessa@grupoamservicos.com.br / vanessaverillocomercial@gmail.com"
+    replace: "AMJR SEGURANÇA PRIVADA LTDA \n Rua Cabo Antônio Pereira da Silva, 506 – Jardim Tranquilidade \nCEP: 07051-011 - São Paulo – SP \nTels.: (11) 96720-6757 / (11) 93287-7969 / (11) 94460-9964 / 2656-6868 \nContato: Aine / Geovanna / Maurício \nE-mail: comercial@amjrsp.com.br"
     
   - trigger: ":demora"
     replace: "\nPrimeiramente, lamentamos a demora em te responder. \nDevido a próximidade do evento, estamos com fila intensa de atendimentos."
